--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
         #restartButton {
             position: fixed;
-            bottom: 50%;
+            bottom: 40%;
             left: 50%;
             transform: translate(-50%, 50%);
             padding: 15px 30px;
@@ -247,7 +247,7 @@
                 'RRRRRRRRRRCCCCCCCCCCCCCCCCCRRRRRRRRRRR',
                 'RRRRRRRRRRRCCCCCCCCCCCCCCCRRRRRRRRRRRR',
                 'RRRRRRRRRRRRCCCCCCCCCCCCCRRRRRRRRRRRRR',
-                'RRRRRRRRRRRRRCCCCCCCCCCCRRRRRRRRRRRRRR',
+                'RRRRRRRRRRRRRCCCCCCCCCCCRRRRRRRRRRRRR',
                 'RRRRRRRRRRRRRRCCCCCCCCCRRRRRRRRRRRRRRR',
                 'RRRRRRRRRRRRRRRCCCCCCCRRRRRRRRRRRRRRRR',
                 '        CCCCCCCCCCCCCCCCCCC           ',
@@ -435,9 +435,9 @@
                 ctx.fillStyle = '#fff';
                 ctx.font = '48px Arial';
                 ctx.textAlign = 'center';
-                ctx.fillText('GAME OVER', canvas.width/2, canvas.height/2);
+                ctx.fillText('GAME OVER', canvas.width/2, canvas.height/2 - 50);
                 ctx.font = '24px Arial';
-                ctx.fillText(`Score: ${score}`, canvas.width/2, canvas.height/2 + 40);
+                ctx.fillText(`Score: ${score}`, canvas.width/2, canvas.height/2);
             }
         }
 
